src/components/layout/layout.module.scss
@import "../../styles/theme";
@import "../../styles/mixins/rhythm";

.layout {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: left;
  margin: auto;
  max-width: $layout-width;
  width: 100%;
  @include padding-left(1);
  @include padding-right(1);
}

main {
  min-width: inherit;
  min-height: calc(100vh - 200px);
}

